test_data/streamwalk/valid/basic/01_empty_object.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

{}

# EXPECTED

BEGIN_OBJECT
END_OBJECT
END_DOCUMENT
