test_data/streamwalk/invalid/syntax/04_unexpected_token.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

{"a":}

# EXPECTED

BEGIN_OBJECT
PROPERTY_NAME a
ERROR UnexpectedToken offset=5
